# src/swagger.json
@@ -62,6 +62,37 @@
       }
     },
     "/address": {
+      "get": {
+        "summary": "Lista os endereços cadastrados",
+        "description": "Rota responsável por listar endereços relacionados ao usuário",
+        "tags": [
+          "Address"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Address"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500":{
+            "description": "Server internal error"
+          }
+        }
+      },
       "post": {
         "summary": "Cadastro de endereço",
         "description": "Rota responsável por criar um novo endereço.",
@@ -96,6 +127,9 @@
           }
         },
         "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
           "400": {
             "description": "Bad request"
           },
@@ -136,9 +170,9 @@
                 "address": {
                   "value": {
                     "id": 1,
-                    "street":"Rua Ingu, 1111",
+                    "street": "Rua Ingu, 1111",
                     "complement": "T2 1806",
-                    "zip_code":"03630-040",
+                    "zip_code": "03630-040",
                     "district": "Penha",
                     "city": "São Paulo",
                     "state": "São Paulo"
@@ -146,6 +180,78 @@
                 }
               }
             }
+          }
+        },
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "500": {
+            "description": "Server internal error"
+          },
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Address_Update"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "summary": "Deletar endereço",
+        "description": "Rota responsável por delete um endeço",
+        "tags": [
+          "Address"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "500": {
+            "description": "Server internal error"
+          },
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Address_Update"
+                }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref":"#/components/schemas/Address_Delete"
+              },
+              "examples": {
+                "address": {
+                  "value": {
+                    "id": 1
+                  }
+                }
+              }
+            }            
           }
         }
       }
@@ -245,7 +351,7 @@
             "type": "string"
           },
           "user_id": {
-            "type": "string"
+            "type": "number"
           }
         }
       },
@@ -272,6 +378,14 @@
           },
           "state": {
             "type": "string"
+          }
+        }
+      },
+      "Address_Delete": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "number"
           }
         }
       }
